[package]
name = "rex"
version = "0.2.0"
authors = [
    "Christopher Breeden <github@u.breeden.cc>",
    "Sebastian Köln <sebk@rynx.org>"
]
edition = '2021'
license = "MIT OR Apache-2.0"
description = "Typesetting mathematics in pure Rust (patched fork)"

[dependencies]
stix2 = { path = "fonts/stix2" }
font_types = { path = "fonts/types" }
serde_derive = "1.0"
serde = "1.0"
env_logger = "0.10"

[dev-dependencies]
serde_yaml = "0.9"
env_logger = "0.10"

[dependencies.log]
version = "0.4"
features = [ "release_max_level_warn" ]

[[bin]]
name = "rex"
